[tool.poetry]
name = "diffusion-breakdown"
version = "0.1.0"
description = ""
authors = ["jimzer <jimi.vaubien@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "diffusion_breakdown", from = "src"}, 
    {include = "tests", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchdata = "^0.5.1"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
